fix popup jump bug

--- a/css/all-ol-style.css
+++ b/css/all-ol-style.css
@@ -131,9 +131,8 @@
   position: absolute;
   top: 2px;
   right: 8px;
-}
-.ol-popup-closer:after {
-  content: "X";
+  cursor: pointer;
+  color: darkblue;
 }
 .ol-popup-nav {
   background-color: lightgray;
