--- a/css/ol-popup.less
+++ b/css/ol-popup.less
@@ -41,10 +41,8 @@
   position: absolute;
   top: 2px;
   right: 8px;
-}
-
-.ol-popup-closer:after {
-  content: "X";
+  cursor: pointer;
+  color: darkblue;
 }
 
 .ol-popup-nav {
